--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.26.0
-transformers==4.30.0
-torch==2.2.0 
-torchvision==0.15.2
-pillow==10.0.0
-pandas==2.0.3
-numpy==1.24.3
-openai==0.27.8
+transformers
+torch
+pillow
+requests
+streamlit
+python-dotenv
